Add Error Prone and NullAway for static code analysis.